# symseg

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  sample_object_cloud.ply
examples/: CMakeLists.txt
examples/full_segmentation/: CMakeLists.txt  main.cpp  vis.hpp
examples/include/: vis.hpp
examples/reflectional_detection/: CMakeLists.txt  config.pbtxt  main.cpp  vis.hpp
examples/reflectional_segmentation/: CMakeLists.txt  main.cpp  vis.hpp
examples/rotational_segmentation/: CMakeLists.txt  main.cpp  vis.hpp
examples/src/: rotational_segmentation.cpp
occupancy_map/: occupancy_map.hpp
proto/: CMakeLists.txt  reflectional_symmetry_detection_example_options.proto  reflectional_symmetry_detection_options.proto
sample_scene/: cloud.ply  occupancy.bt  table_plane.txt
segmentation/: segmentation.hpp
segmentation/region_growing/: region_growing.h  region_growing.hpp
segmentation/region_growing_smoothness/: region_growing_smoothness.h  region_growing_smoothness.hpp
symmetry_segmentation/: reflectional_symmetry_detection_scene.hpp  rotational_symmetry_detection_scene.hpp  scene_oversegmentation.hpp
symmetry_segmentation/symmetry/: .reflectional_symmetry_detection.hpp (aecins-workstation's conflicted copy 2016-12-14 (1)).kate-swp  .reflectional_symmetry_detection.hpp (aecins-workstation's conflicted copy 2016-12-14).kate-swp  refinement_base_functor.hpp  reflectional_symmetry.hpp  reflectional_symmetry_detection.h  reflectional_symmetry_detection.hpp  reflectional_symmetry_detection_core.hpp  reflectional_symmetry_scoring.hpp  reflectional_symmetry_segmentation.h  reflectional_symmetry_segmentation.hpp  rotational_symmetry.hpp  rotational_symmetry_detection.h  rotational_symmetry_detection.hpp  rotational_symmetry_detection_core.hpp  rotational_symmetry_scoring.hpp  rotational_symmetry_segmentation.h  rotational_symmetry_segmentation.hpp
utilities/: eigen.hpp  map.hpp  std_vector.hpp
utilities/filesystem/: alphanum.hpp  filesystem.hpp
utilities/geometry/: geometry.hpp  math.hpp
utilities/graph/: bron_kerbosch.hpp  graph.hpp  graph_algorithms.hpp  graph_base.h  graph_base.hpp  graph_primitives.hpp  graph_weighted.hpp  min_cut.hpp
utilities/pointcloud/: pointcloud.hpp
utilities/visualization/: color.h  color.hpp  pcl_visualization.hpp
